packages/astro/test/fixtures/errors/src/pages/astro-hydration-error.astro
---
import SvelteComponent from '../components/SvelteComponent.svelte';
---

<div>
  <SvelteComponent client:loadm />
</div>